--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Урок 9. Новые возможности CSS3. Добавление анимации</title>
+    <title>Урок 10. Проверка сайта на ошибки и вспомогательные инструменты</title>
 </head>
 
 <body>
